# DyneSect

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTE.md  README.md  rom_chunks.json  run
.claude/: settings.json
cmake/: options.cmake  rom_build.cmake
src/dynediff/: CMakeLists.txt  main.cpp
src/dynepatch/: CMakeLists.txt  main.cpp
src/dynesect/: AIFReader.cpp  AIFReader.h  ASMWriter.cpp  ASMWriter.h  CMakeLists.txt  Label.cpp  Label.h  Memory.cpp  Memory.h  RExReader.cpp  RExReader.h  Type.cpp  Type.h  main.cpp  main.h
tests/: CMakeLists.txt  test_dynediff.cpp  test_dynepatch.cpp  test_dynesect.cpp
